--- a/Pages/AddStorage.cshtml
+++ b/Pages/AddStorage.cshtml
@@ -47,11 +47,11 @@
                     <ol class="breadcrumb bg-transparent p-2 mb-0">
                         <li class="breadcrumb-item d-flex align-items-center">
                             <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
-                            <a href="/ManageStore" class="text-decoration-none">Warehouse</a>
+                            <a href="/ManageStore" class="text-decoration-none">@Model.lblStores</a>
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center active" aria-current="page">
                             <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
-                             <a href="/ManageStorage" class="text-decoration-none">Storages</a>
+                             <a href="/ManageStorage" class="text-decoration-none">@Model.lblStorage</a>
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center active" aria-current="page">
                             <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
