--- a/Pages/Rep_DamagedItems.cshtml
+++ b/Pages/Rep_DamagedItems.cshtml
@@ -1,6 +1,18 @@
 ﻿@page
 @model LabMaterials.Pages.Rep_DamagedItemsModel
 @{
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb bg-transparent p-2 mb-0">
+            <li class="breadcrumb-item d-flex align-items-center">
+                <img src="images/pen.png" alt="Home" width="16" height="16" class="me-2" />
+                <a href="/Rep_MaterialsReceived" class="text-decoration-none">@Model.lblReports</a>
+            </li>
+            <li class="breadcrumb-item d-flex align-items-center">
+                <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
+                @Model.lblDamagedItems
+            </li>
+        </ol>
+    </nav>
     <div class="py-4 border-bottom">
         <div class="d-block mb-4 mb-md-0">
 
