--- a/Pages/AddItem.cshtml
+++ b/Pages/AddItem.cshtml
@@ -70,7 +70,7 @@
 
         const notyf = new Notyf({
             position: {
-                x: 'right',
+                x: 'center',
                 y: 'top',
             },
             types: [
@@ -82,7 +82,9 @@
                         tagName: 'span',
                         color: '#000000'
                     },
-                    dismissible: false
+                    dismissible: true,
+                    duration: 0,
+                    ripple: true
                 }
             ]
         });
