--- a/Pages/AddUser.cshtml
+++ b/Pages/AddUser.cshtml
@@ -26,7 +26,7 @@
 
         const notyf = new Notyf({
             position: {
-                x: 'right',
+                x: 'center',
                 y: 'top',
             },
             types: [
@@ -38,7 +38,9 @@
                         tagName: 'span',
                         color: '#000000'
                     },
-                    dismissible: false
+                    dismissible: true,
+                    duration: 0,
+                    ripple: true
                 }
             ]
         });
