--- a/Pages/EditItem.cshtml
+++ b/Pages/EditItem.cshtml
@@ -27,7 +27,7 @@
 
         const notyf = new Notyf({
             position: {
-                x: 'right',
+                x: 'center',
                 y: 'top',
             },
             types: [
@@ -39,7 +39,9 @@
                         tagName: 'span',
                         color: '#000000'
                     },
-                    dismissible: false
+                    dismissible: true,
+                    duration: 0,
+                    ripple: true
                 }
             ]
         });
