--- a/Pages/EditUser.cshtml
+++ b/Pages/EditUser.cshtml
@@ -41,7 +41,7 @@
 
         const notyf = new Notyf({
             position: {
-                x: 'right',
+                x: 'center',
                 y: 'top',
             },
             types: [
@@ -53,7 +53,9 @@
                         tagName: 'span',
                         color: '#000000'
                     },
-                    dismissible: false
+                    dismissible: true,
+                    duration: 0,
+                    ripple: true
                 }
             ]
         });
