--- a/Pages/Home.cshtml
+++ b/Pages/Home.cshtml
@@ -5,7 +5,7 @@
     <script type="text/javascript" language="javascript">
         const notyf = new Notyf({
         position: {
-        x: 'right',
+        x: 'center',
         y: 'top',
         },
         types: [
@@ -16,8 +16,10 @@
         className: 'fas fa-times',
         tagName: 'span',
         color: '#000000'
-        },
-        dismissible: false
+                    },
+                    dismissible: true,
+                    duration: 0,
+                    ripple: true
         }
         ]
         });
