--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -122,7 +122,7 @@
 <script>
     const notyf = new Notyf({
         position: {
-            x: 'right',
+            x: 'center',
             y: 'top',
         },
         types: [
@@ -134,7 +134,9 @@
                     tagName: 'span',
                     color: '#000000'
                 },
-                dismissible: false
+                    dismissible: true,
+                    duration: 0,
+                    ripple: true
             }
         ]
     });
