--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="~/LabMaterials.styles.css" asp-append-version="true" />
   <link rel="icon" type="image/x-icon" href="~/images/favicon.png" />
   <link rel="shortcut icon" href="~/images/favicon.png" type="image/x-icon" />
-  <link rel="icon" href="~/images/favicon.png" type="image/x-icon" />
+  <link rel="icon" href="~/images/Picture1.png" type="image/x-icon" />
     <style>
         .sidebar-rtl {
             right: 0;
@@ -33,7 +33,7 @@
 
   <nav class="navbar navbar-dark navbar-theme-primary px-4 col-12 d-lg-none">
     <a class="navbar-brand me-lg-5" asp-area="" asp-page="/Home">
-      <img class="navbar-brand-dark" src="images/kau.png" alt="Kau logo" /> <img class="navbar-brand-light"
+      <img class="navbar-brand-dark" src="images/Picture1.png" alt="Kau logo" /> <img class="navbar-brand-light"
         src="../../assets/img/brand/dark.svg" alt=" logo" />
     </a>
     <div class="d-flex align-items-center">
@@ -79,7 +79,7 @@
         <li class="nav-item mb-4">
           <div class=" d-flex align-items-center">
             <span class="sidebar-icon">
-              <img src="images/logo_kau.png" width="100%" alt="Kau Logo">
+              <img src="images/logogmes.png" width="100%" alt="Kau Logo">
             </span>
           </div>
         </li>
