--- a/Pages/EditDisbursement.cshtml
+++ b/Pages/EditDisbursement.cshtml
@@ -145,6 +145,18 @@
 
         <div class="d-flex justify-content-between w-100 flex-wrap">
             <div class="mb-3 mb-lg-0">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb bg-transparent p-2 mb-0">
+                        <li class="breadcrumb-item d-flex align-items-center active" aria-current="page">
+                            <img src="images/expenses.png" alt="Home" width="16" height="16" class="me-2" />
+                             <a href="/Disbursements" class="text-decoration-none">@Model.lblDisbursements</a>
+                        </li>
+                          <li class="breadcrumb-item d-flex align-items-center active" aria-current="page">
+                            <img src="images/expenses.png" alt="Home" width="16" height="16" class="me-2" />
+                             @Model.lblEditDisbursement
+                        </li>
+                    </ol>
+                </nav>
                 <h1 class="h4">@Model.lblEditDisbursement</h1>
                 <!-- <p class="mb-0">Dozens of reusable components built to provide buttons, alerts, popovers, and more.</p> -->
             </div>
