Login page Image

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -56,12 +56,13 @@
                 </a>
                 }
 
-
                 </div>    *@
-                <div class="row justify-content-center form-bg-image" style="background-image: url('images/signin.svg')">
-
-                    <div class="col-12 d-flex align-items-center justify-content-center">
-
+                <div class="row justify-content-center" >
+                <div class="col-12 d-flex align-items-center justify-content-center">
+                            <img src="images/logoware.png"  alt="logo ware" width="320px">
+                        </div> 
+                    <div class="col-12 d-flex align-items-center justify-content-center form-bg-image" style="background-image: url('images/signin.svg')">
+                        
                         <div class="bg-white shadow border-0 rounded border-light p-4 p-lg-5 w-100 fmxw-500" style="height:461px;">
 
                             <div class="text-center text-md-center mb-4 mt-md-0">
@@ -150,6 +151,7 @@
             message: message
 
         });
+    }
 
         function showErrorNotification(message) {
             notyf.open({
