Login page Image

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
         <li class="nav-item mb-4">
           <div class=" d-flex align-items-center">
             <span class="sidebar-icon">
-              <img src="images/logogmes.png" width="100%" alt="Kau Logo">
+              <img src="images/logo_kau.png" width="100%" alt="Kau Logo">
             </span>
           </div>
         </li>
