--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -58,9 +58,9 @@
 
                 </div>    *@
                 <div class="row justify-content-center" >
-                <div class="col-12 d-flex align-items-center justify-content-center">
-                            <img src="images/logoware.png"  alt="logo ware" width="320px">
-                        </div> 
+                    <div class="col-12 d-flex align-items-center justify-content-center mb-4">
+                        <img src="images/logoware.png"  alt="logo ware" width="320px">
+                    </div> 
                     <div class="col-12 d-flex align-items-center justify-content-center form-bg-image" style="background-image: url('images/signin.svg')">
                         
                         <div class="bg-white shadow border-0 rounded border-light p-4 p-lg-5 w-100 fmxw-500" style="height:461px;">
