--- a/Pages/ManageUsers.cshtml
+++ b/Pages/ManageUsers.cshtml
@@ -87,7 +87,9 @@
                                 clip-rule="evenodd"></path>
                         </svg>
                     </span>
-                    <input type="text" name="UserName" class="form-control" placeholder="@Model.lblUserName">
+                    <input type="text" name="UserName" class="form-control"
+                           placeholder="@Model.lblUserName" value="@Model.UserName">
+
                 </div>
             </div>
             <div class="col-4 col-md-2 col-xl-1 ps-md-0 ">
