--- a/Pages/ManageItemGroups.cshtml
+++ b/Pages/ManageItemGroups.cshtml
@@ -87,7 +87,7 @@
                                 clip-rule="evenodd"></path>
                         </svg>
                     </span>
-                    <input type="text" name="GroupName" class="form-control" placeholder="@Model.lblGroupName">
+                    <input type="text" name="GroupName" class="form-control" placeholder="@Model.lblGroupName" value="@Model.GroupName">
                 </div>
             </div>
             <div class="col-4 col-md-2 col-xl-1 ps-md-0 text-end">
