--- a/Pages/ManageStorage.cshtml
+++ b/Pages/ManageStorage.cshtml
@@ -86,7 +86,7 @@
                         </svg>
                     </span>
 
-                    <input type="text" name="StoreNumber" class="form-control" placeholder="@Model.lblStoreNumber">
+                    <input type="text" name="StoreNumber" class="form-control" placeholder="@Model.lblStoreNumber" value="@Model.StoreNumber">
                 </div>
             </div>
             <div class="col col-md-6 col-lg-3 col-xl-3">
@@ -100,7 +100,7 @@
                         </svg>
                     </span>
 
-                    <input type="text" name="StoreName" class="form-control" placeholder="@Model.lblStoreName">
+                    <input type="text" name="StoreName" class="form-control" placeholder="@Model.lblStoreName" value="@Model.StoreName">
                 </div>
             </div>
             <div class="col col-md-6 col-lg-3 col-xl-3">
@@ -114,7 +114,7 @@
                         </svg>
                     </span>
 
-                    <input type="text" name="Item" class="form-control" placeholder="@Model.lblItemName">
+                    <input type="text" name="Item" class="form-control" placeholder="@Model.lblItemName" value="@Model.Item">
                 </div>
             </div>
             <div class="col-4 col-md-2 col-xl-1 ps-md-0 text-end">
