--- a/Pages/ManageStore.cshtml
+++ b/Pages/ManageStore.cshtml
@@ -118,7 +118,7 @@
                                 clip-rule="evenodd"></path>
                         </svg>
                     </span>
-                    <input type="text" name="StoreNumber" class="form-control" placeholder="@Model.lblStoreNumber">
+                    <input type="text" name="StoreNumber" class="form-control" placeholder="@Model.lblStoreNumber" value="@Model.StoreNumber">
                 </div>
             </div>
             <div class="col col-md-6 col-lg-3 col-xl-3">
@@ -131,7 +131,7 @@
                                 clip-rule="evenodd"></path>
                         </svg>
                     </span>
-                    <input type="text" name="StoreName" class="form-control" placeholder="@Model.lblStoreName">
+                    <input type="text" name="StoreName" class="form-control" placeholder="@Model.lblStoreName" value="@Model.StoreName">
                 </div>
             </div>
             <div class="col-4 col-md-2 col-xl-1 ps-md-0 ">
