--- a/Pages/ManageSupplier.cshtml
+++ b/Pages/ManageSupplier.cshtml
@@ -89,7 +89,7 @@
                                 clip-rule="evenodd"></path>
                         </svg>
                     </span>
-                    <input type="text" name="SupplierName" class="form-control" placeholder="@Model.lblSuplierName">
+                    <input type="text" name="SupplierName" class="form-control" placeholder="@Model.lblSuplierName" value="@Model.SupplierName">
                 </div>
             </div>
             <div class="col-4 col-md-2 col-xl-1 ps-md-0 text-end">
