--- a/Pages/ManageUnits.cshtml
+++ b/Pages/ManageUnits.cshtml
@@ -86,7 +86,7 @@
                                 clip-rule="evenodd"></path>
                         </svg>
                     </span>
-                    <input type="text" name="UnitDesc" class="form-control" placeholder="@Model.lblUnitDescription">
+                    <input type="text" name="UnitDesc" class="form-control" placeholder="@Model.lblUnitDescription" value="@Model.UnitDesc">
                 </div>
             </div>
             <div class="col-4 col-md-2 col-xl-1 ps-md-0 text-end">
