--- a/Pages/ManageDestinations.cshtml
+++ b/Pages/ManageDestinations.cshtml
@@ -90,7 +90,7 @@
                          </svg>
                      </span>
 
-                     <input type="text" name="StoreNumber" class="form-control" placeholder="">
+                     <input type="text" name="StoreNumber" class="form-control" placeholder="" >
                  </div>
              </div> -->
             <div class="col col-md-6 col-lg-3 col-xl-3">
@@ -104,7 +104,7 @@
                         </svg>
                     </span>
 
-                    <input type="text" name="DestinationName" class="form-control" placeholder="@Model.lblDestinationName">
+                    <input type="text" name="DestinationName" class="form-control" placeholder="@Model.lblDestinationName" value="@Model.DestinationName">
                 </div>
             </div>
             <!-- <div class="col col-md-6 col-lg-3 col-xl-3">
