--- a/Pages/ManageItems.cshtml
+++ b/Pages/ManageItems.cshtml
@@ -104,7 +104,7 @@
                                           clip-rule="evenodd"></path>
                                 </svg>
                             </span>
-                            <input type="text" name="ItemName" class="form-control" placeholder="@Model.lblItemName">
+                            <input type="text" name="ItemName" class="form-control" placeholder="@Model.lblItemName"  value="@Model.ItemName">
                         </div>
                     </div>
                                 <div class="col col-md-6 col-lg-3 mb-3">
@@ -117,7 +117,7 @@
                                                       clip-rule="evenodd"></path>
                                             </svg>
                                         </span>
-                                        <input type="text" name="Group" class="form-control" placeholder="@Model.lblGroupName">
+                                        <input type="text" name="Group" class="form-control" placeholder="@Model.lblGroupName" value="@Model.Group">
                                     </div>
                                 </div>
                                             <div class="col col-md-6 col-lg-3 mb-3">
