--- a/Pages/ManageRequestor.cshtml
+++ b/Pages/ManageRequestor.cshtml
@@ -103,7 +103,7 @@
                         </svg>
                     </span>
 
-                    <input type="text" name="DestinationName" class="form-control" placeholder="@Model.lblRequestorName">
+                    <input type="text" name="DestinationName" class="form-control" placeholder="@Model.lblRequestorName" value="@Model.DestinationName">
                 </div>
             </div>
             <!-- <div class="col col-md-6 col-lg-3 col-xl-3">
