--- a/Pages/Supplies.cshtml
+++ b/Pages/Supplies.cshtml
@@ -98,7 +98,7 @@
                                         clip-rule="evenodd"></path>
                                 </svg>
                             </span>
-                            <input type="text" name="SupplierName" class="form-control" placeholder="@Model.lblSupplierName">
+                            <input type="text" name="SupplierName" class="form-control" placeholder="@Model.lblSupplierName" value="@Model.SupplierName">
                         </div>
                     </div>
                     <div class="col col-md-6 col-lg-3 mb-3">
@@ -111,7 +111,7 @@
                                         clip-rule="evenodd"></path>
                                 </svg>
                             </span>
-                            <input type="text" name="ItemName" class="form-control" placeholder="@Model.lblItemName">
+                            <input type="text" name="ItemName" class="form-control" placeholder="@Model.lblItemName" value="@Model.ItemName">
                         </div>
                     </div>
                     <div class="col col-md-6 col-lg-3 mb-3">
