--- a/Pages/ManageUserGroups.cshtml
+++ b/Pages/ManageUserGroups.cshtml
@@ -90,7 +90,7 @@
                         </svg>
                     </span>
 
-                    <input type="text" name="UserGroupName" class="form-control" placeholder="@Model.lblUserGroupName">
+                    <input type="text" name="UserGroupName" class="form-control" placeholder="@Model.lblUserGroupName" value="@Model.UserGroupName">
                 </div>
             </div>
             <div class="col-4 col-md-2 col-xl-1 ps-md-0 text-end">
