--- a/Pages/Rep_Distribution.cshtml
+++ b/Pages/Rep_Distribution.cshtml
@@ -59,7 +59,7 @@
                                 clip-rule="evenodd"></path>
                         </svg>
                     </span>
-                    <input type="text" name="RequesterName" class="form-control" placeholder="@Model.lblRequesterName">
+                    <input type="text" name="RequesterName" class="form-control" placeholder="@Model.lblRequesterName" value="@Model.RequesterName">
                 </div>
             </div>
 
