--- a/Pages/Rep_Inventory.cshtml
+++ b/Pages/Rep_Inventory.cshtml
@@ -59,7 +59,7 @@
                                           clip-rule="evenodd"></path>
                                 </svg>
                             </span>
-                            <input type="text" name="StoreNumber" class="form-control" placeholder="@Model.lblStoreName">
+                            <input type="text" name="StoreNumber" class="form-control" placeholder="@Model.lblStoreNumber" value="@Model.StoreNumber">
                         </div>
                     </div>
                     <div class="col-lg-3">
@@ -72,7 +72,7 @@
                                           clip-rule="evenodd"></path>
                                 </svg>
                             </span>
-                            <input type="text" name="StoreName" class="form-control" placeholder="@Model.lblStoreName">
+                            <input type="text" name="StoreName" class="form-control" placeholder="@Model.lblStoreName" value="@Model.StoreName">
                         </div>
                     </div>
                     <div class="col-lg-3">
@@ -85,7 +85,7 @@
                                           clip-rule="evenodd"></path>
                                 </svg>
                             </span>
-                            <input type="text" name="Item" class="form-control" placeholder="@Model.lblItemName">
+                            <input type="text" name="Item" class="form-control" placeholder="@Model.lblItemName" value="@Model.Item">
                         </div>
                     </div>
 
