--- a/Pages/Rep_MaterialsReceived.cshtml
+++ b/Pages/Rep_MaterialsReceived.cshtml
@@ -68,7 +68,7 @@
                                       clip-rule="evenodd"></path>
                             </svg>
                         </span>
-                        <input type="text" name="SupplierName" class="form-control" placeholder="@Model.lblSupplierName">
+                        <input type="text" name="SupplierName" class="form-control" placeholder="@Model.lblSupplierName" value="@Model.SupplierName">
                     </div>
                 </div>
                 <div class="col col-md-3">
@@ -81,7 +81,7 @@
                                       clip-rule="evenodd"></path>
                             </svg>
                         </span>
-                        <input type="text" name="ItemName" class="form-control" placeholder="@Model.lblItemName">
+                        <input type="text" name="ItemName" class="form-control" placeholder="@Model.lblItemName" value="@Model.ItemName">
                     </div>
                 </div>
 
