--- a/Pages/Rep_UserReport.cshtml
+++ b/Pages/Rep_UserReport.cshtml
@@ -52,7 +52,7 @@
                                   clip-rule="evenodd"></path>
                         </svg>
                     </span>
-                    <input type="text" name="UserName" class="form-control" placeholder="@Model.lblUserName">
+                    <input type="text" name="UserName" class="form-control" placeholder="@Model.lblUserName" value="@Model.UserName">
                 </div>
             </div>
             <div class="col col-lg-3">
