--- a/Pages/Disbursements.cshtml
+++ b/Pages/Disbursements.cshtml
@@ -166,6 +166,7 @@
                             <form method="post">
                                 <input type="hidden" value="@item.DisbursementRequestId" name="DisbursementID" />
                                 <input type="submit" value="@Model.lblEdit" class="btn btn-secondary" asp-page-handler="Edit" />
+                                <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" />
                             </form>
                         </td>
                     </tr>
