--- a/Pages/Supplies.cshtml
+++ b/Pages/Supplies.cshtml
@@ -201,6 +201,7 @@
                             <form method="post">
                                 <input type="hidden" value="@item.SupplyId" name="SupplyId" />
                                 <input type="submit" value="@Model.lblEdit" class="btn btn-secondary" asp-page-handler="Edit" />
+                                <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" />
                                 <input type="submit" value="@Model.lblDelete" class="btn btn-danger" asp-page-handler="Delete" />
                             </form>
                         </td>
