--- a/Pages/Rep_MaterialsReceived.cshtml
+++ b/Pages/Rep_MaterialsReceived.cshtml
@@ -35,7 +35,7 @@
             <!-- <p class="mb-0">Your web analytics dashboard template.</p>-->
         </div>
         <div class="d-flex  flex-direcion-column flex-wrap flex-md-nowrap align-items-center btn-toolbar mb-2 mb-md-0">
-            <a href="Rep_MaterialsReceived"
+            @* <a href="Rep_MaterialsReceived"
                class="btn btn-gray-600 d-inline-flex align-items-center report mx-2">@Model.lblMaterialsReceived</a>
 
             <a href="Rep_Distribution" class="btn btn-outline-gray-600 d-inline-flex align-items-center report mx-2"
@@ -43,12 +43,12 @@
             <a href="Rep_Inventory" class="btn btn-outline-gray-600 d-inline-flex align-items-center report mx-2"
                >@Model.lblInventory</a>
             <a href="Rep_HazardMaterial" class="btn btn-outline-gray-600 d-inline-flex align-items-center report mx-2"
-               >@Model.lblHazardousMaterials</a>
+               >@Model.lblHazardousMaterials</a> *@
             <a href="Rep_UserActivity" class="btn btn-outline-gray-600 d-inline-flex align-items-center report mx-2"
                >@Model.lblUserActivity</a>
 
-            <a href="Rep_DamagedItems" class="btn btn-outline-gray-600 d-inline-flex align-items-center report mx-2"
-               >@Model.lblDamagedItems</a>
+            @* <a href="Rep_DamagedItems" class="btn btn-outline-gray-600 d-inline-flex align-items-center report mx-2"
+               >@Model.lblDamagedItems</a> *@
             <a href="Rep_UserReport" class="btn btn-outline-gray-600 d-inline-flex align-items-center report mx-2"
                >@Model.lblUserReport</a>
 
