--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -161,7 +161,7 @@
         {
           <li
             class="nav-item @(Context.Request.Path == "/Rep_MaterialsReceived" || Context.Request.Path == "/Rep_Distribution" || Context.Request.Path == "/Rep_Inventory"  || Context.Request.Path == "/Rep_HazardMaterial" || Context.Request.Path == "/Rep_UserActivity"  ? "active" : "")">
-            <a asp-area="" asp-page="/Rep_MaterialsReceived" class="nav-link">
+            <a asp-area="" asp-page="/Rep_UserActivity" class="nav-link">
               <span class="sidebar-icon">
                 <img class="icon icon-xs mx-3" src="images/pen.png" />
               </span>
@@ -171,7 +171,8 @@
         }
         @if (Model.CanManageUsers)
         {
-            <li class="nav-item @(Context.Request.Path == "/ManageUsers" || Context.Request.Path == "/AddUser" || Context.Request.Path == "/ManageUserGroups" || Context.Request.Path == "/AddUserGroup" || Context.Request.Path == "/EditUser" || Context.Request.Path == "/EditUserGroup" ? "active" : "")">
+          <li
+            class="nav-item @(Context.Request.Path == "/ManageUsers" || Context.Request.Path == "/AddUser" || Context.Request.Path == "/ManageUserGroups" || Context.Request.Path == "/AddUserGroup" || Context.Request.Path == "/EditUser" || Context.Request.Path == "/EditUserGroup" || Context.Request.Path == "/viewUser" ? "active" : "")">
                 <a asp-area="" asp-page="/ManageUsers" class="nav-link">
                     <span class="sidebar-icon">
                         <img class="icon icon-xs mx-3" src="images/management.png" />
