--- a/Pages/viewMaterialDispensing.cshtml
+++ b/Pages/viewMaterialDispensing.cshtml
@@ -1,4 +1,34 @@
 ﻿@page
-@model MyApp.Namespace.viewMaterialDispensingModel
+@model LabMaterials.Pages.viewMaterialDispensingModel
 @{
+    <div class="py-4">
+
+        <div class="d-flex justify-content-between w-100 flex-wrap">
+            <div class="mb-3 mb-lg-0">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb bg-transparent p-2 mb-0">
+                        <li class="breadcrumb-item d-flex align-items-center">
+                            <img src="images/home.png" alt="Home" width="16" height="16" class="me-2" />
+                            <a href="/Home" class="text-decoration-none">@Model.lblHome</a>
+                        </li>
+                        <li class="breadcrumb-item d-flex align-items-center">
+                            <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
+                            <a href="/ManageStore" class="text-decoration-none">@Model.lblStores</a>
+                        </li>
+                        <li class="breadcrumb-item d-flex align-items-center">
+                            <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
+                            <a href="/ManageDestinations" class="text-decoration-none">@Model.lblDestinations</a>
+                        </li>
+                        <li class="breadcrumb-item d-flex align-items-center active" aria-current="page">
+                            <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
+                            @Model.lblView
+                        </li>
+
+                    </ol>
+                </nav>
+                <h1 class="h4">@Model.lblView</h1>
+                <!-- <p class="mb-0">Dozens of reusable components built to provide buttons, alerts, popovers, and more.</p> -->
+            </div>
+        </div>
+    </div>
 }
